# Urho3D

./: .gitignore  imgui_settings  learn.txt  rakefile
Source/: CMakeLists.txt
Source/Editor/: editor_app.cpp  editor_app.h  main.cpp
Source/Editor/Lua/pkgs/: AppLuaAPI.pkg  EditorAppLuaAPI.pkg  EditorCtrlLuaAPI.pkg  EditorViewLuaAPI.pkg  genluabinding.py
Source/Editor/Lua/pkgs/view/ui/: EditorMenu.pkg
Source/Editor/ctrl/: AssetImporter.h  EditorLuaBinding.cpp  EditorLuaBinding.h  asset_mgr.cpp  asset_mgr.h  camera_ctrl.cpp  camera_ctrl.h  edit_command.h  edit_mgr.cpp  edit_mgr.h  editor_delegate.h  event_data.h  event_emitter.cpp  event_emitter.h  file_system_watcher.cpp  file_system_watcher.h  geometry_util.cpp  geometry_util.h  global_event.cpp  global_event.h  history_mgr.cpp  history_mgr.h  scene_ctrl.cpp  scene_ctrl.h  translate.cpp  translate.h  utils.h  work_space.cpp  work_space.h
Source/Editor/ctrl/gizmo/: GizmoUtils.cpp  GizmoUtils.h  RotateGizmo.cpp  RotateGizmo.h  ScaleGizmo.cpp  ScaleGizmo.h  TransformCtrl.cpp  TransformCtrl.h  TransformGizmo.cpp  TransformGizmo.h  TranslateGizmo.cpp  TranslateGizmo.h
Source/Editor/forms/: start.ui
Source/Editor/model/: NodeTreeModel.cpp  NodeTreeModel.h  proj_history.cpp  proj_history.h  res_model.cpp  res_model.h
Source/Editor/qtres/: Urho3dEditor.qrc
Source/Editor/qtres/styles/: darkstyle.qrc
Source/Editor/view/: inspector.cpp  inspector.h  main_window.cpp  main_window.h  menu_bar.cpp  menu_bar.h  node_tree.cpp  node_tree.h  render_view.cpp  render_view.h  res_tree.cpp  res_tree.h  start_view.cpp  start_view.h  tool_bar.cpp  tool_bar.h
Source/Editor/view/inspectors/: CompInspector.h  NodeInspector.h
Source/Editor/view/qtimgui/: CustomGLWidget.cpp  CustomGLWidget.h  ImguiDemo.cpp  ImguiDemo.h  ImguiDemo1.cpp  ImguiDemo1.h  ImguiQGLWidget.cpp  ImguiQGLWidget.h  ImguiWidget.cpp  ImguiWidget.h
Source/Editor/view/styles/: dark_style.cpp  dark_style.h
Source/Editor/view/ui/: EditorMenu.cpp  EditorMenu.h
Source/Tools/Urho3DPlayer/: Urho3DPlayer.cpp
Source/Urho3D/Engine/: Engine.cpp  EngineDefs.h
Source/Urho3D/Graphics/: GeoUtils.cpp  GeoUtils.h  Graphics.cpp  Graphics.h
Source/Urho3D/Graphics/OpenGL/: OGLGraphics.cpp
Source/Urho3D/Input/: Input.cpp
Source/Urho3D/LuaScript/: LuaScript.cpp
Source/Urho3D/LuaScript/pkgs/: GraphicsLuaAPI.pkg
Source/Urho3D/LuaScript/pkgs/Graphics/: GeoUtils.pkg
Source/Urho3D/Math/: Ray.cpp  Ray.h
Source/Urho3D/Scene/: Node.cpp  Node.h
Source/UrhoEditor/: AssetMgr.cpp  AssetMgr.h  CMakeLists.txt  CameraCtrl.cpp  CameraCtrl.h  EditorApp.cpp  EditorApp.h  EditorLuaBinding.cpp  EditorLuaBinding.h  GLSdlWindow.cpp  GLSdlWindow.h  ImguiUpdater.cpp  ImguiUpdater.h  MainMenu.cpp  MainMenu.h  SceneCtrl.cpp  SceneCtrl.h  Utils.h  main.cpp
Source/UrhoEditor/cmd/: CmdDefines.cpp  CmdDefines.h  CmdMgr.cpp  CmdMgr.h  EditCmd.h
Source/UrhoEditor/ctrls/: AssetImporter.cpp  AssetMgr.cpp  AssetMgr.h  CameraCtrl.cpp  CameraCtrl.h  EditorFileWatch.cpp  EditorFileWatch.h  HistoryMgr.cpp  HistoryMgr.h  SceneCtrl.cpp  SceneCtrl.h
Source/UrhoEditor/data/socket/: core.exp  core.lib
Source/UrhoEditor/delegate/: Delegate.h
Source/UrhoEditor/event/: EventData.h  EventEmitter.cpp  EventEmitter.h  GEvent.cpp  GEvent.h
Source/UrhoEditor/gizmo/: GizmoUtils.cpp  GizmoUtils.h  RotateGizmo.cpp  RotateGizmo.h  ScaleGizmo.cpp  ScaleGizmo.h  TransformCtrl.cpp  TransformCtrl.h  TransformGizmo.cpp  TransformGizmo.h  TranslateGizmo.cpp  TranslateGizmo.h
Source/UrhoEditor/imgui/: imgui.cpp  imgui_demo.cpp
Source/UrhoEditor/imgui/tolua/: bind_obj_imgui.cpp  bind_obj_imgui.hpp  helper.hpp  imgui_iterator.inl  lib.hpp
Source/UrhoEditor/lib/glfw/lib/x64/: glfw3.lib
Source/UrhoEditor/lib/sdl/include/: SDL_config.h
Source/UrhoEditor/model/: ProjHistory.cpp  ProjHistory.h
Source/UrhoEditor/pkgs/: EditorLuaAPI.pkg  genluabinding.py
Source/UrhoEditor/views/: ConsoleView.cpp  ConsoleView.h  EditorWidget.cpp  EditorWidget.h  FolderFiles.cpp  FolderFiles.h  Inspector.cpp  Inspector.h  MainWindow.cpp  MainWindow.h  Menubar.cpp  Menubar.h  NodeTree.cpp  NodeTree.h  ResPreview.cpp  ResPreview.h  ResTree.cpp  ResTree.h  SceneView.cpp  SceneView.h  StartView.cpp  StartView.h  Toolbar.cpp  Toolbar.h
Source/UrhoEditor/views/inspectors/: AniModelInspector.cpp  AniModelInspector.h  MatInspector.cpp  MatInspector.h  TransformInspector.cpp  TransformInspector.h  VariantDrawer.cpp  VariantDrawer.h
mingw/: Urho3D.cbp  Urho3D_d.cbp
pc/Urho3DEditor/: Urho3DEditor.pro
platform/projects/test/assets/: test.scene
platform/projects/test/assets/fbx/: cube.fbx  cube.mdl  plane.fbx  plane.mdl
platform/projects/test/assets/mats/: Ninja.xml  Stone.xml
platform/urho3d_vs/: urho3d_vs.sln
platform/urho3d_vs/UrhoEditor/: UrhoEditor.vcxproj  UrhoEditor.vcxproj.filters
platform/urho3d_vs/editor/: editor.vcxproj  editor.vcxproj.filters
platform/urho3d_vs/imgui/: imgui.vcxproj  imgui.vcxproj.filters
website/docs/getting-started/: installation.mdx
